# led_detection

./: .gitignore  .pre-commit-config.yaml  Deployment_Reality_Check.md  ML_vs_Classical_CV.md  Porting_to_C_Cpp_Rust.md  README.md  blink_tests.json  pyproject.toml  requirements.txt  results.json
.github/workflows/: ci.yml
src/led_detection/: main.py
tests/: test_detection.py  test_main.py  test_reproduction.py  test_reproduction_complex.py
tests/data_generation/: generate_pulse_library.py
tests/integration/: LOGGING.md  PREVIEW.md  README.md  __init__.py  led_controller.py  test_batch_classification.py  test_led_pulse.py  test_oneshot.py  test_roi_consistency_real.py
tests/unit/: test_autofocus.py  test_detection.py  test_exposure_logic.py  test_false_positive.py  test_led_controller_logic.py  test_main.py  test_noise_floor_init.py  test_pulse_accuracy.py  test_reproduce_stuck.py  test_roi_consistency_mock.py  test_scenarios.py
