[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "led_detection"
version = "0.1.0"
description = "A best-in-class Python project for LED detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.pylint.main]
extension-pkg-allow-list = ["cv2"]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
]

[tool.pylint.format]
max-line-length = 100
