[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "led_detection"
version = "0.1.0"
description = "A best-in-class Python project for LED detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(filename)s:%(lineno)d %(message)s"
log_cli_date_format = "%H:%M:%S"

[tool.pylint.main]
extension-pkg-allow-list = ["cv2"]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.messages_control]
disable = [
    "C0111", # missing-docstring
    "C0103", # invalid-name
    "C0302", # too-many-lines
    "R0912", # too-many-branches
    "R0915", # too-many-statements
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.tests]
# Test-specific overrides
disable = [
    "duplicate-code",  # Test helpers often share logic
    "no-member",  # cv2 members not recognized by pylint
    "protected-access",  # Tests need to access protected members
    "too-many-instance-attributes",  # Mock drivers can have many attrs
    "too-many-public-methods",  # Test classes have many test methods
    "line-too-long",  # Test assertions can be verbose
]
